# opengl

OpenGL1/: CMakeLists.txt  OpenGL1.sln
OpenGL1/Dependencies/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  GLAD.sln  ZERO_CHECK.vcxproj  glad-generate-files.vcxproj  glad.vcxproj.filters
OpenGL1/Dependencies/GLAD/: ALL_BUILD.vcxproj  CMakeCache.txt  CMakeLists(2).txt  CMakeLists.txt  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  glad-generate-files.vcxproj.filters  glad.vcxproj
OpenGL1/Dependencies/GLAD/bild/: CMakeCache.txt
OpenGL1/Dependencies/GLAD/include/glad/: glad.h
OpenGL1/OpenGL1/: OpenGL1.vcxproj  OpenGL1.vcxproj.filters
OpenGL1/OpenGL1/Debug/: OpenGL1.exe.recipe
OpenGL1/OpenGL1/Release/: OpenGL1.exe.recipe
OpenGL1/OpenGL1/src/: Application.cpp
OpenGL1/Release/: glad.c
bild/: CMakeCache.txt
